# slide-builder

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  INSTALL.md  PRODUCT.md  README.md  delegated-doodling-cocke.md
.impeccable/: design.json
assets/: README.md  blank.pptx
src/: config.rs  credentials.rs  design.rs  design_import.rs  design_import_workflow.rs  lib.rs  main.rs  main_tests.rs  paths.rs  prompt.rs  skills.rs
src/agent/: deck_engine.rs  deck_engine_inspection_tests.rs  deck_engine_tests.rs  deck_tool_schema_tests.rs  deck_tools.rs  design_importer.rs  inspection_geometry.rs  inspection_geometry_tests.rs  mod.rs  policy.rs  runtime.rs  session_store.rs  skill_tool.rs  skill_tool_tests.rs  tool_summary.rs  tool_summary_tests.rs  tools.rs  tools_tests.rs
src/agent/deck_engine/: mutation.rs  state.rs
src/builtin_skills/deck-assets/: SKILL.md
src/builtin_skills/deck-design/: SKILL.md
src/builtin_skills/design-package-import/: SKILL.md
src/builtin_skills/slide-builder-pptx/: SKILL.md
src/builtin_skills/slide-design/: SKILL.md
src/render/: browser.rs  cache.rs  mod.rs  pipeline.rs
src/tui/: app.rs  app_agent_tools_tests.rs  app_controls_tests.rs  app_import_design_tests.rs  chat.rs  chat_tests.rs  conversation_entry.rs  conversation_entry_tests.rs  event.rs  layout.rs  layout_tests.rs  mod.rs  mouse.rs  mouse_tests.rs  outline.rs  preview.rs  preview_image.rs  preview_image_tests.rs  slideshow.rs  statusline.rs  theme.rs  theme_terminal_palette.rs  theme_terminal_palette_tests.rs
src/tui/modal/: approval.rs  command_palette.rs  configuration.rs  deck_picker.rs  design_picker.rs  filesystem_picker.rs  filesystem_picker_tests.rs  help.rs  menu.rs  mod.rs  questionnaire.rs  setup.rs  (+1 more)
