[package]
name = "slide-builder"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "AI-first terminal PowerPoint builder"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6"
futures = "0.3"
handler-common = { git = "https://github.com/RainLib/OfficeCli-rust.git", rev = "acabe4959a37235dd587bbcc788565f19a824bb7" }
image = { version = "0.25", default-features = false, features = ["png"] }
keyring = "4.1.5"
libc = "0.2"
notify = "8"
pptx-handler = { git = "https://github.com/RainLib/OfficeCli-rust.git", rev = "acabe4959a37235dd587bbcc788565f19a824bb7" }
pulldown-cmark = "0.13"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
rho-sdk = { git = "https://github.com/matthewyjiang/rho.git", rev = "a2d29d1559051d513d01e3c77ebaa93427ecbff0" }
rho-providers = { git = "https://github.com/matthewyjiang/rho.git", rev = "a2d29d1559051d513d01e3c77ebaa93427ecbff0" }
rho-agent-tools = { git = "https://github.com/matthewyjiang/rho.git", rev = "a2d29d1559051d513d01e3c77ebaa93427ecbff0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
unicode-segmentation = "1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
